fix horizontal scrollbar in poetry slideshow

--- a/src/app/poetry/components/poem-full-card/poem-full-card.component.scss
+++ b/src/app/poetry/components/poem-full-card/poem-full-card.component.scss
@@ -1,16 +1,16 @@
 .poem-container {
   position: relative;
-  display:  flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
   margin: auto;
   max-width: 60vw;
   max-height: 80vh;
   overflow-y: hidden;
-  background-color: rgba($color: #1E1E24, $alpha: 0.95);
+  background-color: rgba($color: #1e1e24, $alpha: 0.95);
   margin: 0;
   padding: 0;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
 
@@ -26,12 +26,12 @@
   width: 100%;
   height: 90%;
 
-  &>img {
+  & > img {
     width: 100%;
-    margin-bottom: 2rem
+    margin-bottom: 2rem;
   }
 
-  &>p {
+  & > p {
     padding: 0 1.5rem;
   }
 }
@@ -43,13 +43,12 @@
   position: absolute;
   width: 100%;
   height: 12%;
-  border-top-left-radius: .5rem;
-  border-top-right-radius: .5rem;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
   top: 0;
 
   overflow: hidden;
 }
-
 
 @keyframes transitionIn {
   from {
@@ -57,5 +56,17 @@
   }
   to {
     opacity: 1;
+  }
+}
+
+@media (min-width: 360px) and (max-width: 720px) {
+  .poem-container {
+    max-width: 82vw;
+  }
+
+  .poem-body {
+    p {
+      padding: 0 0.4rem;
+    }
   }
 }
